<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:design="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#e3e3e3"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<LinearLayout
		android:id="@+id/actionplan_tile"
		android:layout_width="match_parent"
		android:layout_height="@dimen/height_88dp"
		android:layout_marginTop="@dimen/margin_10dp"
		android:layout_marginLeft="@dimen/margin_10dp"
		android:layout_marginRight="@dimen/margin_10dp"
		android:layout_marginEnd="@dimen/margin_10dp"
		android:background="@color/white"
		android:orientation="horizontal"
		android:weightSum="1">
		<LinearLayout
			android:layout_width="@dimen/width_64dp"
			android:layout_height="@dimen/height_64dp"
			android:layout_marginTop="@dimen/margin_12dp"
			android:layout_marginLeft="@dimen/margin_12dp"
			android:background="@drawable/circle_background_actionplan">
			<ImageView
				android:id="@+id/actionplan_imageview"
				android:layout_width="@dimen/width_24dp"
				android:layout_height="@dimen/height_28dp"
				android:layout_marginLeft="@dimen/marginleft_20dp"
				android:layout_marginTop="@dimen/margintop_20dp"
				android:src="@drawable/habits_icon_selected"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="217dp"
			android:layout_height="match_parent"
			android:layout_marginLeft="@dimen/margin_12dp"
			android:orientation="vertical">
			<TextView
				android:id="@+id/actionplan_title"
				android:layout_width="match_parent"
				android:layout_height="@dimen/height_20dp"
				android:layout_marginTop="@dimen/margintop_20dp"
				android:textStyle="bold"
				android:text="@string/actionplan_title"/>
			<TextView
				android:id="@+id/actionplan_subtitle"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/height_35dp"
				android:text="@string/actionplan_subtitle"/>
		</LinearLayout>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="@dimen/height_35dp"
			android:layout_marginTop="@dimen/margin_30dp"
			android:layout_marginLeft="@dimen/margin_14dp"
			android:src="@drawable/disclosure_icon"/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/medication_tile"
		android:layout_width="match_parent"
		android:layout_height="@dimen/height_88dp"
		android:layout_marginTop="@dimen/margin_10dp"
		android:layout_marginLeft="@dimen/margin_10dp"
		android:layout_marginRight="@dimen/margin_10dp"
		android:layout_marginEnd="@dimen/margin_10dp"
		android:background="@color/white"
		android:orientation="horizontal"
		android:weightSum="1">
		<LinearLayout
			android:layout_width="@dimen/width_64dp"
			android:layout_height="@dimen/height_64dp"
			android:layout_marginTop="@dimen/margin_12dp"
			android:layout_marginLeft="@dimen/margin_12dp"
			android:background="@drawable/circle_background_medication">
			<ImageView
				android:id="@+id/medication_imageview"
				android:layout_width="@dimen/width_24dp"
				android:layout_height="@dimen/height_28dp"
				android:layout_marginLeft="@dimen/marginleft_20dp"
				android:layout_marginTop="@dimen/margintop_20dp"
				android:src="@drawable/meds_icon_selected"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="217dp"
			android:layout_height="match_parent"
			android:layout_marginLeft="@dimen/margin_12dp"
			android:orientation="vertical">
			<TextView
				android:id="@+id/medication_title"
				android:layout_width="match_parent"
				android:layout_height="@dimen/height_20dp"
				android:layout_marginTop="@dimen/margintop_20dp"
				android:textStyle="bold"
				android:text="@string/medication_title"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="35dp"
				android:text="@string/medication_subtitle"/>
		</LinearLayout>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="@dimen/height_35dp"
			android:layout_marginTop="@dimen/margin_30dp"
			android:layout_marginLeft="@dimen/margin_14dp"
			android:src="@drawable/disclosure_icon"/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/weight_tile"
		android:layout_width="match_parent"
		android:layout_height="@dimen/height_88dp"
		android:layout_marginTop="@dimen/margin_10dp"
		android:layout_marginLeft="@dimen/margin_10dp"
		android:layout_marginRight="@dimen/margin_10dp"
		android:layout_marginEnd="@dimen/margin_10dp"
		android:background="@color/white"
		android:orientation="horizontal"
		android:weightSum="1">
		<LinearLayout
			android:layout_width="@dimen/width_64dp"
			android:layout_height="@dimen/height_64dp"
			android:layout_marginTop="@dimen/margin_12dp"
			android:layout_marginLeft="@dimen/margin_12dp"
			android:background="@drawable/circle_background">
			<ImageView
				android:id="@+id/imageView"
				android:layout_width="@dimen/width_24dp"
				android:layout_height="@dimen/height_28dp"
				android:layout_marginLeft="@dimen/marginleft_20dp"
				android:layout_marginTop="@dimen/margintop_20dp"
				android:src="@drawable/weight_icon"/>
	</LinearLayout>
		<LinearLayout
			android:layout_width="217dp"
			android:layout_height="match_parent"
			android:layout_marginLeft="@dimen/margin_12dp"
			android:orientation="vertical">
			<TextView
				android:id="@+id/weight_title"
				android:layout_width="match_parent"
				android:layout_height="@dimen/height_20dp"
				android:layout_marginTop="@dimen/margintop_20dp"
				android:textStyle="bold"
				android:text="@string/weight_title"/>
			<TextView
				android:id="@+id/weight_subtitle"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/height_35dp"
				android:text="@string/weight_subtitle"/>

		</LinearLayout>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="@dimen/height_35dp"
			android:layout_marginTop="@dimen/margin_30dp"
			android:layout_marginLeft="@dimen/margin_14dp"
			android:src="@drawable/disclosure_icon"/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/profile_tile"
		android:layout_width="match_parent"
		android:layout_height="@dimen/height_88dp"
		android:layout_marginTop="@dimen/margin_10dp"
		android:layout_marginLeft="@dimen/margin_10dp"
		android:layout_marginRight="@dimen/margin_10dp"
		android:layout_marginEnd="@dimen/margin_10dp"
		android:background="@color/white"
		android:orientation="horizontal"
		android:weightSum="1">
		<LinearLayout
			android:layout_width="@dimen/width_64dp"
			android:layout_height="@dimen/height_64dp"
			android:layout_marginTop="@dimen/margin_12dp"
			android:layout_marginLeft="@dimen/margin_12dp"
			android:background="@drawable/circle_background_profile">
			<ImageView
				android:id="@+id/profile_imageview"
				android:layout_width="@dimen/width_24dp"
				android:layout_height="@dimen/height_28dp"
				android:layout_marginLeft="@dimen/marginleft_20dp"
				android:layout_marginTop="@dimen/margintop_20dp"
				android:src="@drawable/weight_icon"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="217dp"
			android:layout_height="match_parent"
			android:layout_marginLeft="@dimen/margin_12dp"
			android:orientation="vertical">
			<TextView
				android:id="@+id/profile_title"
				android:layout_width="match_parent"
				android:layout_height="@dimen/height_20dp"
				android:layout_marginTop="@dimen/margintop_20dp"
				android:textStyle="bold"
				android:text="@string/profile_title"/>
			<TextView
				android:id="@+id/profile_subtitle"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/height_35dp"
				android:text="@string/profile_subtitle"/>

		</LinearLayout>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="@dimen/height_35dp"
			android:layout_marginTop="@dimen/margin_30dp"
			android:layout_marginLeft="@dimen/margin_14dp"
			android:src="@drawable/disclosure_icon"/>
	</LinearLayout>

	<ListView
		android:id="@android:id/list"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="@dimen/margintop_20dp"
		android:layout_weight="2"
		android:visibility="invisible"></ListView>

</LinearLayout>